tests/v0-fail/reject.out
Running <root>/reject.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern reject at line <root>/reject.cli:5 rejected output line "hello"
matching Any(End)
  matching End
  -matching "hello" (ignore)
  -match: "hello" (ignore)
-matching "hello" (ignore)
-match: "hello" (ignore)

❌ FAIL

<root>/reject.cli FAILED
Error: pattern reject at line <root>/reject.cli:5 rejected output line "hello"

